# elowen-edge

./: .gitignore  Cargo.toml  Dockerfile  README.md  edge.env.example
scripts/windows/: Install-ElowenEdgeStartup.ps1  Register-ElowenEdgeTask.ps1  Start-ElowenEdge.ps1
src/: config.rs  contracts.rs  lib.rs  main.rs
