[package]
name = "elowen-edge"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-nats = "0.39"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
